WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
258314
AX: AccessibilityNodeObject::addChildren() does not null-check its node before using it
https://bugs.webkit.org/show_bug.cgi?id=258314
Summary
AX: AccessibilityNodeObject::addChildren() does not null-check its node befor...
Tyler Wilcock
Reported
2023-06-20 12:21:30 PDT
This leads to crashes.
Attachments
Patch
(1.21 KB, patch)
2023-06-20 12:25 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Patch
(1.70 KB, patch)
2023-06-20 13:24 PDT
,
Tyler Wilcock
no flags
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Radar WebKit Bug Importer
Comment 1
2023-06-20 12:21:44 PDT
<
rdar://problem/111056760
>
Tyler Wilcock
Comment 2
2023-06-20 12:22:28 PDT
rdar://110703896
Tyler Wilcock
Comment 3
2023-06-20 12:25:39 PDT
Created
attachment 466765
[details]
Patch
chris fleizach
Comment 4
2023-06-20 12:38:05 PDT
Comment on
attachment 466765
[details]
Patch should we put this in a local variable instead of calling node() 3 times?
Tyler Wilcock
Comment 5
2023-06-20 13:24:37 PDT
Created
attachment 466766
[details]
Patch
Tyler Wilcock
Comment 6
2023-06-20 13:24:51 PDT
(In reply to chris fleizach from
comment #4
)
> Comment on
attachment 466765
[details]
> Patch > > should we put this in a local variable instead of calling node() 3 times?
Fixed!
EWS
Comment 7
2023-06-20 18:18:29 PDT
Committed
265342@main
(7c8d3655b4cb): <
https://commits.webkit.org/265342@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 466766
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug