AX: AccessibilityNodeObject::addChildren() does not null-check its node before using it https://bugs.webkit.org/show_bug.cgi?id=258314 rdar://110703896

Reviewed by Chris Fleizach.

This leads to nullptr-deref crashes. This patch adds a null check.

* Source/WebCore/accessibility/AccessibilityNodeObject.cpp:
(WebCore::AccessibilityNodeObject::addChildren):

Canonical link: https://commits.webkit.org/265342@main